_assets/stylesheets/brewhouse.css.scss
/* ... */
#projects {
  ul {
    color: #999;
    list-style: none;
    margin: 20px 0 20px 0;
    padding-left: 0;
  }

  h2 {
    margin-bottom: 2em;
  }

  .client-logos {
    .col-sm-3:nth-child(4n+1) {
      clear: left;
    }
    a {
      border: 1px solid #eee;
      display: block;
      margin-bottom: 2em;
      padding: .75em;
      -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
      border-radius: 4px;
      -webkit-transition: all .15s ease-in-out;
      -moz-transition: all .15s ease-in-out;
      transition: all .15s ease-in-out;
      img {
        height: auto;
        width: auto;
        max-height: 30px;
        max-width: 80%;
        vertical-align: middle;
        -webkit-filter: grayscale(100%);
        -moz-filter: grayscale(100%);
        filter: grayscale(100%);
        -webkit-transition: all .15s ease-in-out;
        -moz-transition: all .15s ease-in-out;
        transition: all .15s ease-in-out;
      }
      &:hover,
      &:focus {
        border-color: #47A4C2;
        img {
          -webkit-filter: grayscale(0);
          -moz-filter: grayscale(0);
          filter: grayscale(0);
        }
      }
    }
  }
}

#privacy-policy-section {
  padding:80px 0;
  h2 {
    font-size: 24px;
  }
  p {
    line-height: 1.7em;
  }
}

.cover {
  background-attachment: fixed;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  color: #fff;
  padding: 4em 0;
  position: relative;
  &:after {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1;
  }
  .container,
  .clearfix {
    position: relative;
    z-index: 2;
  }
  a {
    color: rgba(#fff, .8);
    -webkit-transition: .25s ease-in-out;
    -moz-transition: .25s ease-in-out;
    transition: .25s ease-in-out;
    &:hover,
    &:focus {
      color: #fff;
    }
  }
  .bh-product {
    background: #fff;
    border: 1px solid #383C4A;
    color: #383C4A;
    display: inline-block;
    font-family: $sans-serif;
    font-size: .75em;
    font-weight: 700;
    letter-spacing: .125em;
    padding: .5em 1em;
    margin: 0 auto;
    position: relative;
    text-transform: uppercase;
    top: -6.325em;
    z-index: 3;
  }
  .project-logo {
    display: block;
  }
  @media (min-width: 768px) {
    padding: 8em 0;
    .bh-product {
      top: -11.75em;
    }
  }
}

#goodbits {
  background-color: #383C4A;
  background-image: url('/images/bg-goodbits.jpg');
  img {
    height: 42px;
  }
  h2 {
    font-size: 1.5em;
    font-weight: 400;
    line-height: 1.5;
  }
  &:after {
    background-color: rgba(#383C4A, .7);
  }
}

.lets-talk {
  color: #fff;
  padding-bottom: 2em;
  padding-top: 1em;
}

.lets-talk .container > div {
  margin-top: 1em;
}

// BLOG SPECIFIC
.post {
  margin: 0 0 60px 0;

  h1, h2, h3 {
    color: #3a3a3a;
  }
  li, p, blockquote {
    font-family: $serif;
    font-size: 1em;
    line-height: 1.5;

    @media (max-width: 767px) {
      font-size: .875em;
      line-height: 1.5;
    }
  }
  blockquote {
    color: #999;
  }
  p {
    margin-bottom: 24px;
  }
  ul, ol {
    margin-bottom: 24px;
  }
  .social-actions {
    margin-top: 10px;
    float: right;
  }
  .img-author {
    margin: 5px 10px 5px 0;
  }

  img {
    margin: 0 auto;
    max-width: 100%;
    height: auto;
  }
}
#navbar-blog {
  background: transparent;
  left: 10px;
  margin-bottom: 0;
  position: fixed;
  top: 2px;
  width: 55px;
  box-shadow: none;

  @media (max-width: 767px) {
    display: none;
  }

  #brewhouse-logo {
    display: block;

    img {
      height: 55px;
    }
  }
}
.highlight {
  pre, code {
    background-color: #1d1f21;
  }
  pre {
    margin-bottom: 30px;
    @media (max-width: 767px) {
      font-size: .75em;
    }

    overflow: auto;
    word-wrap: normal;
    white-space: pre;

    code {
      white-space: pre;
    }
  }
}
#banner-blog {
  background: #fff;
  border-bottom: 3px solid #fcfcfc;
  min-height: 140px;

  .banner-content {
    height: 100%;
    margin: 5px auto;
    width: 80%;
  }
  section {
    h1 {
      color: #63636E;
    }
    h1 a {
      color: #63636E;
      text-decoration: none;
    }
    h1 a:hover {
      color: #63636E;
      text-decoration: none;
    }
    h3 {
      color: #555;
      font-size: .925em;
      font-weight: 500;
      line-height: 1.5;
      margin-top: 0;
      text-transform: initial;
    }
  }
  .blog-contact-info {
    color: #999;
    font-size: .925em;
    font-weight: 500;
    line-height: 1.5;
    margin-top: 74px;
    text-align: right;

    a {
      text-decoration: none;
    }
  }
}

// Pagination
html.blog {
  .content {
    margin: 30px auto;
  }
  .pagination {
    position: relative;
    width: 80%;
    max-width: 730px;
    margin: 4rem auto;
    font-size: 1.3rem;
    color: #9EABB3;
    text-align: center;
  }

  .pagination a {
    // color: #9EABB3;
  }

  .pagination a:hover {
    text-decoration: none;
  }

  /* Push the previous/next links out to the left/right */
  .older-posts,
  .newer-posts {
    position: absolute;
    display: inline-block;
    padding: 0 15px;
    border: #47A4C2 1px solid;
    text-decoration: none;
    border-radius: 30px;
    transition: border ease 0.3s;
  }

  .older-posts {
    right: 0;
  }

  .page-number {
    display: inline-block;
    padding: 2px 0;
  }

  .newer-posts {
    left: 0;
  }

  .older-posts:hover,
  .newer-posts:hover {
    border-color: #F39914;
  }
}
/* ... */

